src/main/java/miLenguajeParser.java
// Generated from .//miLenguaje.g4 by ANTLR 4.13.1

import java.util.Map;
import java.util.HashMap;
import InterpreterPattern.*;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class miLenguajeParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, TIPO=14, BOOLEAN=15, ID=16, NUMBER=17, 
		WS=18;
	public static final int
		RULE_start = 0, RULE_declaraciones = 1, RULE_declaracion = 2, RULE_declaracionVariable = 3, 
		RULE_declaracionFuncion = 4, RULE_sentencias = 5, RULE_sentencia = 6, 
		RULE_asignacion = 7, RULE_ifDeclaracion = 8, RULE_volverDeclaracion = 9, 
		RULE_expresion = 10, RULE_factor = 11, RULE_termino = 12;
	private static String[] makeRuleNames() {
		return new String[] {
			"start", "declaraciones", "declaracion", "declaracionVariable", "declaracionFuncion", 
			"sentencias", "sentencia", "asignacion", "ifDeclaracion", "volverDeclaracion", 
			"expresion", "factor", "termino"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "';'", "'('", "')'", "'{'", "'}'", "'='", "'Puede'", "'Entonces'", 
			"'retornar'", "'+'", "'-'", "'*'", "'/'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, "TIPO", "BOOLEAN", "ID", "NUMBER", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "miLenguaje.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


	Map<String, Pair<String, Object>> symbolTable = new HashMap<String, Pair<String, Object>>();

	public miLenguajeParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StartContext extends ParserRuleContext {
		public DeclaracionesContext declaraciones() {
			return getRuleContext(DeclaracionesContext.class,0);
		}
		public TerminalNode EOF() { return getToken(miLenguajeParser.EOF, 0); }
		public StartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof miLenguajeListener ) ((miLenguajeListener)listener).enterStart(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof miLenguajeListener ) ((miLenguajeListener)listener).exitStart(this);
		}
	}

	public final StartContext start() throws RecognitionException {
		StartContext _localctx = new StartContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_start);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(26);
			declaraciones();
			setState(27);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclaracionesContext extends ParserRuleContext {
		public ASTNode node;
		public DeclaracionContext declaracion;
		public DeclaracionContext declaracion() {
			return getRuleContext(DeclaracionContext.class,0);
		}
		public DeclaracionesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaraciones; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof miLenguajeListener ) ((miLenguajeListener)listener).enterDeclaraciones(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof miLenguajeListener ) ((miLenguajeListener)listener).exitDeclaraciones(this);
		}
	}

	public final DeclaracionesContext declaraciones() throws RecognitionException {
		DeclaracionesContext _localctx = new DeclaracionesContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_declaraciones);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(29);
			((DeclaracionesContext)_localctx).declaracion = declaracion();
			((DeclaracionesContext)_localctx).node =  ((DeclaracionesContext)_localctx).declaracion.node;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclaracionContext extends ParserRuleContext {
		public ASTNode node;
		public DeclaracionFuncionContext declaracionFuncion;
		public DeclaracionesContext declaraciones;
		public DeclaracionVariableContext declaracionVariable;
		public DeclaracionFuncionContext declaracionFuncion() {
			return getRuleContext(DeclaracionFuncionContext.class,0);
		}
		public List<DeclaracionesContext> declaraciones() {
			return getRuleContexts(DeclaracionesContext.class);
		}
		public DeclaracionesContext declaraciones(int i) {
			return getRuleContext(DeclaracionesContext.class,i);
		}
		public DeclaracionVariableContext declaracionVariable() {
			return getRuleContext(DeclaracionVariableContext.class,0);
		}
		public DeclaracionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaracion; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof miLenguajeListener ) ((miLenguajeListener)listener).enterDeclaracion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof miLenguajeListener ) ((miLenguajeListener)listener).exitDeclaracion(this);
		}
	}

	public final DeclaracionContext declaracion() throws RecognitionException {
		DeclaracionContext _localctx = new DeclaracionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_declaracion);
		try {
			int _alt;
			setState(52);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(32);
				((DeclaracionContext)_localctx).declaracionFuncion = declaracionFuncion();
				((DeclaracionContext)_localctx).node =  ((DeclaracionContext)_localctx).declaracionFuncion.node; 
				setState(39);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(34);
						((DeclaracionContext)_localctx).declaraciones = declaraciones();
						((DeclaracionContext)_localctx).node =  ((DeclaracionContext)_localctx).declaraciones.node; 
						}
						} 
					}
					setState(41);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
				}
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(42);
				((DeclaracionContext)_localctx).declaracionVariable = declaracionVariable();
				((DeclaracionContext)_localctx).node =  ((DeclaracionContext)_localctx).declaracionVariable.node; 
				setState(49);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(44);
						((DeclaracionContext)_localctx).declaraciones = declaraciones();
						((DeclaracionContext)_localctx).node =  ((DeclaracionContext)_localctx).declaraciones.node; 
						}
						} 
					}
					setState(51);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
				}
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclaracionVariableContext extends ParserRuleContext {
		public ASTNode node;
		public Token TIPO;
		public Token ID;
		public TerminalNode TIPO() { return getToken(miLenguajeParser.TIPO, 0); }
		public TerminalNode ID() { return getToken(miLenguajeParser.ID, 0); }
		public DeclaracionVariableContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaracionVariable; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof miLenguajeListener ) ((miLenguajeListener)listener).enterDeclaracionVariable(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof miLenguajeListener ) ((miLenguajeListener)listener).exitDeclaracionVariable(this);
		}
	}

	public final DeclaracionVariableContext declaracionVariable() throws RecognitionException {
		DeclaracionVariableContext _localctx = new DeclaracionVariableContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_declaracionVariable);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(54);
			((DeclaracionVariableContext)_localctx).TIPO = match(TIPO);
			setState(55);
			((DeclaracionVariableContext)_localctx).ID = match(ID);
			setState(56);
			match(T__0);
			 ((DeclaracionVariableContext)_localctx).node =  new VariableDeclaration((((DeclaracionVariableContext)_localctx).ID!=null?((DeclaracionVariableContext)_localctx).ID.getText():null), (((DeclaracionVariableContext)_localctx).TIPO!=null?((DeclaracionVariableContext)_localctx).TIPO.getText():null));
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclaracionFuncionContext extends ParserRuleContext {
		public ASTNode node;
		public Token TIPO;
		public Token ID;
		public SentenciaContext sentencia;
		public TerminalNode TIPO() { return getToken(miLenguajeParser.TIPO, 0); }
		public TerminalNode ID() { return getToken(miLenguajeParser.ID, 0); }
		public List<SentenciaContext> sentencia() {
			return getRuleContexts(SentenciaContext.class);
		}
		public SentenciaContext sentencia(int i) {
			return getRuleContext(SentenciaContext.class,i);
		}
		public DeclaracionFuncionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaracionFuncion; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof miLenguajeListener ) ((miLenguajeListener)listener).enterDeclaracionFuncion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof miLenguajeListener ) ((miLenguajeListener)listener).exitDeclaracionFuncion(this);
		}
	}

	public final DeclaracionFuncionContext declaracionFuncion() throws RecognitionException {
		DeclaracionFuncionContext _localctx = new DeclaracionFuncionContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_declaracionFuncion);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(59);
			((DeclaracionFuncionContext)_localctx).TIPO = match(TIPO);
			setState(60);
			((DeclaracionFuncionContext)_localctx).ID = match(ID);
			setState(61);
			match(T__1);
			setState(62);
			match(T__2);
			setState(63);
			match(T__3);

			                    List<ASTNode> body = new ArrayList<ASTNode>();
			                    symbolTable.put("actualFunction", new Pair<>((((DeclaracionFuncionContext)_localctx).ID!=null?((DeclaracionFuncionContext)_localctx).ID.getText():null), (((DeclaracionFuncionContext)_localctx).TIPO!=null?((DeclaracionFuncionContext)_localctx).TIPO.getText():null)));
			                    symbolTable.put((((DeclaracionFuncionContext)_localctx).ID!=null?((DeclaracionFuncionContext)_localctx).ID.getText():null), new Pair<>((((DeclaracionFuncionContext)_localctx).TIPO!=null?((DeclaracionFuncionContext)_localctx).TIPO.getText():null), -1));
			                
			setState(70);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 82560L) != 0)) {
				{
				{
				setState(65);
				((DeclaracionFuncionContext)_localctx).sentencia = sentencia();
				body.add(((DeclaracionFuncionContext)_localctx).sentencia.node);
				}
				}
				setState(72);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(73);
			match(T__4);

			                    for (ASTNode node : body) {
			                        node.execute(symbolTable);
			                    }
			                
			((DeclaracionFuncionContext)_localctx).node =  new FunctionDeclaration((((DeclaracionFuncionContext)_localctx).ID!=null?((DeclaracionFuncionContext)_localctx).ID.getText():null) , (((DeclaracionFuncionContext)_localctx).TIPO!=null?((DeclaracionFuncionContext)_localctx).TIPO.getText():null));
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SentenciasContext extends ParserRuleContext {
		public ASTNode node;
		public SentenciaContext sentencia;
		public SentenciaContext sentencia() {
			return getRuleContext(SentenciaContext.class,0);
		}
		public List<SentenciasContext> sentencias() {
			return getRuleContexts(SentenciasContext.class);
		}
		public SentenciasContext sentencias(int i) {
			return getRuleContext(SentenciasContext.class,i);
		}
		public SentenciasContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sentencias; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof miLenguajeListener ) ((miLenguajeListener)listener).enterSentencias(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof miLenguajeListener ) ((miLenguajeListener)listener).exitSentencias(this);
		}
	}

	public final SentenciasContext sentencias() throws RecognitionException {
		SentenciasContext _localctx = new SentenciasContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_sentencias);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(77);
			((SentenciasContext)_localctx).sentencia = sentencia();
			((SentenciasContext)_localctx).node =  ((SentenciasContext)_localctx).sentencia.node;
			setState(82);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(79);
					sentencias();
					}
					} 
				}
				setState(84);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SentenciaContext extends ParserRuleContext {
		public ASTNode node;
		public DeclaracionVariableContext declaracionVariable;
		public AsignacionContext asignacion;
		public IfDeclaracionContext ifDeclaracion;
		public VolverDeclaracionContext volverDeclaracion;
		public DeclaracionFuncionContext declaracionFuncion;
		public DeclaracionVariableContext declaracionVariable() {
			return getRuleContext(DeclaracionVariableContext.class,0);
		}
		public AsignacionContext asignacion() {
			return getRuleContext(AsignacionContext.class,0);
		}
		public IfDeclaracionContext ifDeclaracion() {
			return getRuleContext(IfDeclaracionContext.class,0);
		}
		public VolverDeclaracionContext volverDeclaracion() {
			return getRuleContext(VolverDeclaracionContext.class,0);
		}
		public DeclaracionFuncionContext declaracionFuncion() {
			return getRuleContext(DeclaracionFuncionContext.class,0);
		}
		public SentenciaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sentencia; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof miLenguajeListener ) ((miLenguajeListener)listener).enterSentencia(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof miLenguajeListener ) ((miLenguajeListener)listener).exitSentencia(this);
		}
	}

	public final SentenciaContext sentencia() throws RecognitionException {
		SentenciaContext _localctx = new SentenciaContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_sentencia);
		try {
			setState(100);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(85);
				((SentenciaContext)_localctx).declaracionVariable = declaracionVariable();
				((SentenciaContext)_localctx).node =  ((SentenciaContext)_localctx).declaracionVariable.node;
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(88);
				((SentenciaContext)_localctx).asignacion = asignacion();
				((SentenciaContext)_localctx).node =  ((SentenciaContext)_localctx).asignacion.node;
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(91);
				((SentenciaContext)_localctx).ifDeclaracion = ifDeclaracion();
				((SentenciaContext)_localctx).node =  ((SentenciaContext)_localctx).ifDeclaracion.node;
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(94);
				((SentenciaContext)_localctx).volverDeclaracion = volverDeclaracion();
				((SentenciaContext)_localctx).node =  ((SentenciaContext)_localctx).volverDeclaracion.node;
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(97);
				((SentenciaContext)_localctx).declaracionFuncion = declaracionFuncion();
				((SentenciaContext)_localctx).node =  ((SentenciaContext)_localctx).declaracionFuncion.node;
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AsignacionContext extends ParserRuleContext {
		public ASTNode node;
		public Token ID;
		public ExpresionContext expresion;
		public TerminalNode ID() { return getToken(miLenguajeParser.ID, 0); }
		public ExpresionContext expresion() {
			return getRuleContext(ExpresionContext.class,0);
		}
		public AsignacionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_asignacion; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof miLenguajeListener ) ((miLenguajeListener)listener).enterAsignacion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof miLenguajeListener ) ((miLenguajeListener)listener).exitAsignacion(this);
		}
	}

	public final AsignacionContext asignacion() throws RecognitionException {
		AsignacionContext _localctx = new AsignacionContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_asignacion);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(102);
			((AsignacionContext)_localctx).ID = match(ID);
			setState(103);
			match(T__5);
			setState(104);
			((AsignacionContext)_localctx).expresion = expresion();
			setState(105);
			match(T__0);
			 ((AsignacionContext)_localctx).node =  new Assignment((((AsignacionContext)_localctx).ID!=null?((AsignacionContext)_localctx).ID.getText():null), ((AsignacionContext)_localctx).expresion.node);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class IfDeclaracionContext extends ParserRuleContext {
		public ASTNode node;
		public TerminoContext termino;
		public SentenciaContext s1;
		public SentenciaContext s2;
		public TerminoContext termino() {
			return getRuleContext(TerminoContext.class,0);
		}
		public List<SentenciaContext> sentencia() {
			return getRuleContexts(SentenciaContext.class);
		}
		public SentenciaContext sentencia(int i) {
			return getRuleContext(SentenciaContext.class,i);
		}
		public IfDeclaracionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ifDeclaracion; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof miLenguajeListener ) ((miLenguajeListener)listener).enterIfDeclaracion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof miLenguajeListener ) ((miLenguajeListener)listener).exitIfDeclaracion(this);
		}
	}

	public final IfDeclaracionContext ifDeclaracion() throws RecognitionException {
		IfDeclaracionContext _localctx = new IfDeclaracionContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_ifDeclaracion);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(108);
			match(T__6);
			setState(109);
			match(T__1);
			setState(110);
			((IfDeclaracionContext)_localctx).termino = termino();
			setState(111);
			match(T__2);

			                      List<ASTNode> body = new ArrayList<ASTNode>();
			                  
			setState(113);
			match(T__3);
			setState(119);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 82560L) != 0)) {
				{
				{
				setState(114);
				((IfDeclaracionContext)_localctx).s1 = sentencia();
				 body.add(((IfDeclaracionContext)_localctx).s1.node);
				}
				}
				setState(121);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(122);
			match(T__4);
			setState(123);
			match(T__7);

			                        List<ASTNode> elseBody = new ArrayList<ASTNode>();
			                  
			setState(125);
			match(T__3);
			setState(131);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 82560L) != 0)) {
				{
				{
				setState(126);
				((IfDeclaracionContext)_localctx).s2 = sentencia();
				 elseBody.add(((IfDeclaracionContext)_localctx).s2.node);
				}
				}
				setState(133);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(134);
			match(T__4);

			                        ((IfDeclaracionContext)_localctx).node =  new If(((IfDeclaracionContext)_localctx).termino.node, body, elseBody);
			                  
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class VolverDeclaracionContext extends ParserRuleContext {
		public ASTNode node;
		public ExpresionContext expresion;
		public ExpresionContext expresion() {
			return getRuleContext(ExpresionContext.class,0);
		}
		public VolverDeclaracionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_volverDeclaracion; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof miLenguajeListener ) ((miLenguajeListener)listener).enterVolverDeclaracion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof miLenguajeListener ) ((miLenguajeListener)listener).exitVolverDeclaracion(this);
		}
	}

	public final VolverDeclaracionContext volverDeclaracion() throws RecognitionException {
		VolverDeclaracionContext _localctx = new VolverDeclaracionContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_volverDeclaracion);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(137);
			match(T__8);
			setState(138);
			((VolverDeclaracionContext)_localctx).expresion = expresion();
			setState(139);
			match(T__0);
			((VolverDeclaracionContext)_localctx).node =  new Return(((VolverDeclaracionContext)_localctx).expresion.node);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ExpresionContext extends ParserRuleContext {
		public ASTNode node;
		public FactorContext f1;
		public FactorContext f2;
		public List<FactorContext> factor() {
			return getRuleContexts(FactorContext.class);
		}
		public FactorContext factor(int i) {
			return getRuleContext(FactorContext.class,i);
		}
		public List<ExpresionContext> expresion() {
			return getRuleContexts(ExpresionContext.class);
		}
		public ExpresionContext expresion(int i) {
			return getRuleContext(ExpresionContext.class,i);
		}
		public ExpresionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expresion; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof miLenguajeListener ) ((miLenguajeListener)listener).enterExpresion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof miLenguajeListener ) ((miLenguajeListener)listener).exitExpresion(this);
		}
	}
